  Migrate from java.util.Date to java.time
  IntelliJ code analysis, Sonar run
  DateUtil, removed methods that have become redundant with the new java.time api
  ColumnConditionModel no longer based on java.sql.Types, replaced with typeClass (Class)
  Column.isSearchable() removed, not used anywhere
  ColumnSummary and related classes refactored, now uses streams for most things
  EntityTableModel.get/setQueryConditionRequired() replaced with getQueryConditionRequiredState()
  EntityConditionPanel removed, pretty much redundant, query condition required action moved to EntityTablePanel popup menu via EntityTableConditionPanel.getControls()
  Entity.OrderBy refactored, no longer uses a Map for the property order
  DefaultLocalEntityConnection, some minor refactoring
  ControlProvider.createButton() removed
  Cleanup of ui variable names, abbreviations retired
  Further code cleanup
  Entities renamed to Domain
  Entities reintroduced for static helper methods moved from Domain
  EntitiesTest refactored from DomainTest
  Entity.getPrimaryKeyProperties() added, Domain.isKeyModified() moved to Entities
  Some javadoc fixes and improvements
  Entities.sort(Properties) moved to Properties
  EntityTableCellRenderer bug fixed, Temporal values now properly rendered, did not handle null correctly
  Type for foreign key property is now Types.OTHER instead of Types.REF
  UiUtil.linkToEnabledState() no longer allows enabledState to be null
  Some code quality improvements
  Some javadoc improvements, continued
  EntityConnection.TYPE and getType() removed
  EntityConnectionProvider.getConnectionType() now returns a String
  Some code cleanup and javadoc improvements
  Entity.Definition.getResultPacker() removed, EntityResultPacker moved to DefaultLocalEntityConnection
  DefaultLocalEntityConnection.iterator() now synchronizes on connection
  Domain, minor refactoring of KeyGenerators
  Control bug fixed, did not initialize enabled status according to enabledState