@@ -58,8 +58,10 @@ public final class ControlsTest {
     final State enabledState = States.state(false);
     final Controls.ToggleControl control = Controls.toggleControl(state, "stateToggleControl", enabledState);
     assertFalse(control.isEnabled());
+    assertFalse(control.getButtonModel().isEnabled());
     enabledState.setActive(true);
     assertTrue(control.isEnabled());
+    assertTrue(control.getButtonModel().isEnabled());
     assertEquals(control.getName(), "stateToggleControl");
     assertFalse(control.getButtonModel().isSelected());
     state.setActive(true);
