@@ -4995,3 +4995,4 @@
   DefaultLocalEntityConnection.iterator() now synchronizes on connection
   Domain, minor refactoring of KeyGenerators
   Control bug fixed, did not initialize enabled status according to enabledState
+  Controls.ToggleControl bug fixed, buttonModel enabled status did not follow enabledState
